GNU dbm NEWS -- history of user-visible changes. 2016-07-13
Copyright (C) 1990-2016 Free Software Foundation, Inc.
See the end of file for copying conditions.

Please send gdbm bug reports to <bug-gdbm@gnu.org>.

Version 1.12.90 (Git)

* gdbm_fetch, gdbm_firstkey, and gdbm_nextkey behavior

If the requested key was not found, these functions return datum with
dptr pointing to NULL and set gdbm_errno to GDBM_ITEM_NOT_FOUND (in
prior releases, gdbm_errno was set to GDBM_NO_ERROR),

If an error occurred, dptr is set to NULL, and gdbm_errno to
the error code.

In any case gdbm_errno is guaranteed to have meaningful value upon
return.

The gdbm_fetch function no longer aborts on memory allocation errors.
Instead it sets gdbm_errno to GDBM_MALLOC_ERROR and returns NULL datum.

* Per-database error codes

* New functions

** gdbm_last_errno

** gdbm_clear_error

** gdbm_needs_recovery

* Line editing in gdbmtool

The gdbmtool utility now offers the usual line-editing facilities (if
the package has been compiled with GNU Readline.

* Magic file included

The magic file suitable for use with the file(1) command is
distributed with the package.  Its name is src/gdbm.magic.

It is not installed by default, as its installation location differs
considerably between various distributions.


Version 1.12, 2016-05-16

* New configuration variable COMPATINCLUDEDIR

When used with --enable-libgdbm-compat, this variable points to the
directory where the headers file dbm.h and ndbm.h will be installed.
Use this variable to avoid conflicts with already installed headers.
E.g.:

 ./configure --enable-libgdbm-compat COMPATINCLUDEDIR=/usr/include/gdbm

* Bugfixes
 

Version 1.11, 2013-12-25

* Improved dump format.

A new dump format is implemented, which encodes all data in base64 and
stores not only key/data pairs, but also the original database file
metadata, such as file name, mode and ownership.  Files in this format
can be sent without additional encapsulation over transmission