@@ -49,6 +49,9 @@ extern "C" {
 # define GDBM_NOLOCK	0x040	/* Don't do file locking operations. */
 # define GDBM_NOMMAP	0x080	/* Don't use mmap(). */
 # define GDBM_CLOEXEC   0x100   /* Close the underlying fd on exec(3) */
+# define GDBM_BSEXACT   0x200   /* Don't adjust block_size. Bail out with
+				   GDBM_BLOCK_SIZE_ERROR error if unable to
+				   set it. */  
   
 /* Parameters to gdbm_store for simple insertion or replacement in the
    case that the key is already in the database. */
